# feasibility_reporter

./: .env.example  .gitignore  README.md  pyproject.toml  pyproject_old.toml  report.md  requirements.txt
db/: chroma.sqlite3
feasibility_reporter/: pyvenv.cfg
src/feasibility_reporter/: crew.py  main.py
src/feasibility_reporter/config/: agents.yaml  tasks.yaml
