[project]
name = "feasibility_reporter"
version = "0.1.0"
description = "feasibility_reporter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
latest_ai_development = "feasibility_reporter.main:run"
run_crew = "feasibility_reporter.main:run"
train = "feasibility_reporter.main:train"
replay = "feasibility_reporter.main:replay"
test = "feasibility_reporter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
